RESOLVED FIXED275968
Fix for missing unionRectForCharacterRange in NSTextInputClient_Async protocol.
https://bugs.webkit.org/show_bug.cgi?id=275968
Summary Fix for missing unionRectForCharacterRange in NSTextInputClient_Async protocol.
Megan Gardner
Reported 2024-06-27 14:24:48 PDT
Fix for missing unionRectForCharacterRange in NSTextInputClient_Async protocol.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-27 14:25:00 PDT
Megan Gardner
Comment 2 2024-06-27 14:26:10 PDT
EWS
Comment 3 2024-06-27 14:59:39 PDT
Committed 280434@main (b7cf26a1875c): <https://commits.webkit.org/280434@main> Reviewed commits have been landed. Closing PR #30246 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.