Fix for missing unionRectForCharacterRange in NSTextInputClient_Async protocol. https://bugs.webkit.org/show_bug.cgi?id=275968 rdar://130702955

Reviewed by Aditya Keerthi.

Due to rdar://128280640 we need to add this method.

* Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
(-[WKWebView unionRectForCharacterRange:completionHandler:]):

Canonical link: https://commits.webkit.org/280434@main